# RubiksCube

./: 1.cr  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CubeCell.cpp  CubeCell.h  CubeEdge.cpp  CubeEdge.h  RubiksCube.cpp  RubiksCube.h  RubiksCubeApp.cpp  RubiksCubeApp.h
